<resources>
    <string name="app_name">ServicesTestApp</string>
    <string name="service">Service</string>
    <string name="foreground_service">Foreground Service</string>
    <string name="intent_service">Intent Service</string>
    <string name="job_dispatcher">Job Scheduler</string>
    <string name="job_intent_service">Job Intent Service</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="work_manager">Work Manager</string>
</resources>